Fix canvas sizing to remove scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,8 +23,8 @@ body, input {
 }
 
 #stars > canvas {
-	min-width: 100vw;
-	min-height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 .main-page {
